ändrat adessen till style sheet

--- a/boktips.html
+++ b/boktips.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/boktips.css">
+    <link rel="stylesheet" href="./CSS/boktips.css">
     <meta charset="utf-8">
 
     <title>Boktips html</title>
