--- a/zoom.html
+++ b/zoom.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../CSS/zoom.css">
+    <link rel="stylesheet" href="./CSS/zoom.css">
     <script src="https://kit.fontawesome.com/4e1c8713bf.js" crossorigin="anonymous"></script>
     <title>Zoom länk</title>
 </head>
