--- a/begravdjätte.html
+++ b/begravdjätte.html
@@ -1,1 +1,14 @@
-<p>Test</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./CSS/begravdjätte.css">
+    <title>Bergravd jätte</title>
+</head>
+<body>
+    
+</body>
+</html>
