--- a/kräftorna.html
+++ b/kräftorna.html
@@ -9,6 +9,9 @@
     <title>Där kräftorna sjunger</title>
 </head>
 <body>
+    <header>
+        <div class="container"></div>
+    </header>
     
 </body>
 </html>
