--- a/kräftorna.html
+++ b/kräftorna.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        <div class="container"></div>
+        <div class="container">
+        <img src="https://i.postimg.cc/tJXN1PCM/9789137154831-200x-dar-kraftorna-sjunger.jpg" alt="">
+        </div>
     </header>
     
 </body>
