--- a/kräftorna.html
+++ b/kräftorna.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="container">
-        <img src="https://i.postimg.cc/tJXN1PCM/9789137154831-200x-dar-kraftorna-sjunger.jpg" alt="">
+            <div class="aktuell_bok">
+                <img src="https://i.postimg.cc/tJXN1PCM/9789137154831-200x-dar-kraftorna-sjunger.jpg" alt="" width="100%">
+            </div>
         </div>
     </header>
     
