--- a/kräftorna.html
+++ b/kräftorna.html
@@ -45,9 +45,14 @@
             <input type="checkbox" name="star" id="linnea_star5"><label for="linnea_star5"></label>
           </div>
 
-        </div>
-
+    
     </section>
+
+    <div class="namn">
+        <p>Josse:</p>
+        <p>Mamma:</p>
+        <p>Linnea:</p>
+    </div>
     
 </body>
 </html>
