--- a/midnattsbibliotek.html
+++ b/midnattsbibliotek.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./CSS/midnattbibliotek.css">
-    <title>Midnattsbiblioteket checkbox</title>
+    <title>Midnattsbiblioteket</title>
 </head>
 <body>
     <header>
@@ -44,12 +44,7 @@
             <input type="checkbox" name="star" id="linnea_star5" class="box"><label for="linnea_star5"></label>
           </div>
 
-          <input type="checkbox" id="1" class="box">checkbox1</input><br>
-<input type="checkbox" id="2" class="box">checkbox2</input><br>
-<input type="checkbox" id="3" class="box">checkbox3</input><br>
-<input type="checkbox" id="4" class="box">checkbox4</input><br>
-<input type="checkbox" id="5" class="box">checkbox5</input><br>
-<input type="checkbox" id="6" class="box">checkbox6</input><br>
+       
 
     </section>
 
